# Geoapify MCP Server Configuration

[project]
name = "geoapify-mcp-server"
version = "0.1.0"
description = "MCP server for Geoapify geocoding, routing, places and location APIs"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
geoapify-server = "geoapify_mcp_server.__main__:main"

# Optional: Add more metadata
# [project.optional-dependencies]
# dev = [
#     "pytest>=7.0.0",
#     "black>=23.0.0", 
#     "ruff>=0.1.0",
# ]
#
# [project.urls]
# Homepage = "https://github.com/yourusername/your-mcp-server"
# Repository = "https://github.com/yourusername/your-mcp-server"
# Issues = "https://github.com/yourusername/your-mcp-server/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geoapify_mcp_server"]
# Ensure non-Python data is included in the wheel
force-include = { "geoapify_mcp_server/tools.json" = "geoapify_mcp_server/tools.json" }

[tool.hatch.build.targets.sdist]
include = [
  "geoapify_mcp_server/**",
  "README.md",
  "LICENSE",
]


